cpp/beer-song/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.010s
user	0m0.002s
sys	0m0.008s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
[ 25%] Building CXX object CMakeFiles/beer-song.dir/beer_song_test.cpp.o
[ 50%] Building CXX object CMakeFiles/beer-song.dir/beer_song.cpp.o
[ 75%] Building CXX object CMakeFiles/beer-song.dir/test/tests-main.cpp.o
[100%] Linking CXX executable beer-song
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
[100%] Built target beer-song
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
===============================================================================
All tests passed (5 assertions in 5 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
[100%] Built target test_beer-song
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/beer-song.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/beer-song.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)30949"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
beer_song.cpp                                 40      36    90%   10,12,34,38
beer_song_test.cpp                            20      20   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         92      83    90%
------------------------------------------------------------------------------
lines: 90.2% (83 out of 92)
branches: 44.1% (89 out of 202)

real	0m10.748s
user	0m9.712s
sys	0m1.001s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.173s
user	0m0.119s
sys	0m0.039s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.184s
user	0m0.122s
sys	0m0.054s

===============================================================================

Running: clang-format-16 -style=file -i ./beer_song.cpp ./beer_song_test.cpp ./beer_song.h

real	0m0.021s
user	0m0.011s
sys	0m0.009s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./beer_song.cpp ./beer_song_test.cpp ./beer_song.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/beer_song.h:4:
/usr/include/boost/format.hpp:17:10: fatal error: 'vector' file not found
#include <vector>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/beer_song.h.

real	0m2.631s
user	0m2.532s
sys	0m0.098s


real	0m2.633s
user	0m2.533s
sys	0m0.099s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
39022 warnings generated.
86722 warnings generated.
95992 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/beer_song.h.
Suppressed 95996 warnings (95991 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m14.568s
user	0m14.442s
sys	0m0.125s
Running: clang-tidy-16 ./beer_song.cpp ./beer_song_test.cpp ./beer_song.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/beer-song/beer_song_test.cpp:11:5: warning: variable 'expected' of type 'string' (aka 'basic_string<char>') can be declared 'const' [misc-const-correctness]
    string expected =
    ^
           const 
/usr/include/boost/format.hpp:17:10: error: 'vector' file not found [clang-diagnostic-error]
#include <vector>
         ^~~~~~~~


real	0m14.570s
user	0m14.445s
sys	0m0.125s

===============================================================================

